<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.att.cppbook.search"
    android:background="@drawable/background"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_question"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSearchKey"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/rgItems">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_title"
                android:id="@+id/rbSearchByTitle"
                android:textSize="24sp"
                android:padding="10dp"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_author"
                android:id="@+id/rbSearchByAuthor"
                android:padding="10dp"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_content"
                android:id="@+id/rbSearchByContent"
                android:padding="10dp"
                android:textSize="24sp" />

        </RadioGroup>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/btn_back"
                android:id="@+id/btnBack"
                android:textSize="24sp"
                android:onClick="onBtnBackClick"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/btnFind"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:text="@string/search_button_label"
                android:id="@+id/btnFind"
                android:textSize="24sp"
                android:onClick="onBtnFindClick"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:textColor="@android:color/holo_red_dark"
                android:backgroundTintMode="multiply" />
        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultListView"
            android:layout_gravity="center_horizontal"
            android:headerDividersEnabled="false" />
    </LinearLayout>
</RelativeLayout>
